--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
   color: #999;
-  margin: 0 auto 30px;
+  margin: 0 auto 20px;
 
 }
 
@@ -36,7 +36,7 @@
   flex-wrap: wrap;
   width: 340px;
   justify-content: space-between;
-  margin: 0 auto;
+  margin: 0 auto 20px;
 }
 
 
@@ -68,18 +68,22 @@
 
 .laps-list{
   box-sizing: border-box;
+  box-shadow: 0 0 5px rgba(112, 112, 112, 0.5);
   list-style: none;
-  margin: 0 auto;
-  padding: 0;
+  padding: 5px;
 }
 
 .laps-item{
-  border: 1px solid #ddd;
+  box-shadow: 0 0 2px rgba(112, 112, 112, 0.5);
   border-radius: 3px;
   padding: 2px 5px;
-  margin-bottom: 2px;
+  margin-bottom: 5px;
   text-align: center;
   font-size: 15px;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
+  color: #888;
+}
+.laps-item:last-child{
+  margin-bottom: 0;
 }
