--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@
   padding: 5px;
 }
 
-.laps-item{
+.lap-item{
   box-shadow: 0 0 2px rgba(112, 112, 112, 0.5);
   border-radius: 3px;
   padding: 2px 5px;
@@ -99,6 +99,6 @@
   justify-content: space-between;
   align-items: center;
 }
-.laps-item:last-child{
+.lap-item:last-child{
   margin-bottom: 0;
 }
